[package]
name = "toi"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
clap_complete = "4.0.3"
clap_complete_command = "0.4.0"
directories = "4.0.1"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
sysinfo = "0.26.7"
