[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "server"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "server_test"
path = "src/main.rs"


[dependencies]
mio = { version = "0.8.4", features = ["net", "os-poll"] }
